Fixed gab between nav and header on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -343,7 +343,7 @@ table tr td{
     nav ul{
         width: 100%;
         position: absolute;
-        top: 100px;
+        top: 90px;
         right: 0;
         z-index: 2;
         box-shadow: 10px 10px 10px;
